--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testimonial-page",
+  "name": "Vite+tailwind-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
+    "prettier": "3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
